force-app/main/default/objects/SubscriberMessage__c/SubscriberMessage__c.object-meta.xml
<CustomObject>
    <label>SubscriberMessage</label>
    <nameField>
        <displayFormat>SubMes-{0000}</displayFormat>
        <label>SubscriberMessage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SubscriberMessage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>