force-app/main/default/objects/SubscriberMessage__c/fields/PublisherMessages__c.field-meta.xml
<CustomField>
    <fullName>PublisherMessages__c</fullName>
    <label>PublisherMessages</label>
    <referenceTo>PublisherMessages__c</referenceTo>
    <relationshipLabel>SubscriberMessage</relationshipLabel>
    <relationshipName>SubscriberMessage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>