force-app/main/default/objects/SubscriberMessage__c/fields/Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscriber</label>
    <referenceTo>Subscriber__c</referenceTo>
    <relationshipLabel>SubscriberMessage</relationshipLabel>
    <relationshipName>SubscriberMessage</relationshipName>
    <type>Lookup</type>
</CustomField>